kube/web-at-home/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web-at-home
  labels:
    name: web-at-home
