kube/web-at-home/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: web-at-home
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "wikipedia.kube.myblome.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiwix
                port :
                  number: 8080
    - host: "maps.kube.myblome.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maps
                port :
                  number: 80
    - host: "searxng.kube.myblome.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port :
                  number: 8080
    - host: "fresh-rss.kube.myblome.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fresh-rss
                port :
                  number: 80
    - host: "glance.kube.myblome.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 8080
    - host: "registry.kube.myblome.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port :
                  number: 5000
